/ ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.html’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex’ / ‘Algebra/UGA Questions/tex_tempfiles/UGA_Algebra_Qual_Questions.pdf’

--- a/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
+++ b/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
@@ -93,11 +93,11 @@ classes of \(G\).
 Here, as usual, \(Z(G)\) denotes the center of \(G\).
 \end{quote}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Hint/strategy omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2012-2-work}{%
 \subsection{\texorpdfstring{Spring 2012 \#2
@@ -226,9 +226,9 @@ Let \(G\) be a finite group with \(n\) distinct conjugacy classes. Let
 Prove that if \(g_i g_j = g_j g_i\) for all \(i, j\) then \(G\) is
 abelian.
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2019-midterm-2-work}{%
 \subsection{\texorpdfstring{Fall 2019 Midterm \#2
@@ -390,9 +390,9 @@ Let \(G\) be a finite group whose order is divisible by a prime number
   \(P \subseteq M\) or \(|G/M | = p^b\) for some \(b \leq c\).
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2019-2-done}{%
 \subsection{\texorpdfstring{Fall 2019 \#2
@@ -413,9 +413,9 @@ subgroups respectively.
   Prove that if \(P\) is normal in \(G\) then \(G\) is cyclic.
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2021-3-work}{%
 \subsection{\texorpdfstring{Spring 2021 \#3
@@ -561,9 +561,9 @@ in \(G\) such that \(g \cdot a = b\).)
   no fixed points in \(S\).
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{groups-classification}{%
 \section{Groups: Classification}\label{groups-classification}}
@@ -593,9 +593,9 @@ How many isomorphism classes are there of groups of order 45?
 
 Describe a representative from each class.
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \todo[inline]{Revisit, seems short.}
 
@@ -642,9 +642,9 @@ How many groups are there up to isomorphism of order \(pq\) where
   groups of order \(5^2 \cdot 7^2\).
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{groups-simple-and-solvable}{%
 \section{Groups: Simple and Solvable}\label{groups-simple-and-solvable}}
@@ -766,11 +766,11 @@ Let \(R\) be a ring with the property that for every
   Prove that \(R\) is commutative.
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Hint/strategy omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2019-6-done}{%
 \subsection{\texorpdfstring{Fall 2019 \#6
@@ -797,9 +797,9 @@ Zorn's Lemma.
   every element \(r\) of \(R\) is either nilpotent or a unit.
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2019-6-done}{%
 \subsection{\texorpdfstring{Spring 2019 \#6
@@ -825,9 +825,9 @@ integer \(n\).
   consists precisely of the nilpotent elements in R.
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2018-7-done}{%
 \subsection{\texorpdfstring{Fall 2018 \#7
@@ -867,9 +867,9 @@ isomorphic to exactly one of the following:
 .\end{align*}
 \end{quote}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2018-5-work}{%
 \subsection{\texorpdfstring{Spring 2018 \#5
@@ -1309,9 +1309,9 @@ integer relatively prime to \(q\) and let \(\omega\) be a primitive
 
 \todo[inline]{Revisit, tricky!}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2019-7-done}{%
 \subsection{\texorpdfstring{Fall 2019 \#7
@@ -1327,9 +1327,9 @@ Show that the field extension \({\mathbb{Q}}(\zeta_n )\) over
 
 How many subfields are there of \({\mathbb{Q}}(\zeta_{20} )\)?
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2019-2-done}{%
 \subsection{\texorpdfstring{Spring 2019 \#2
@@ -1347,9 +1347,9 @@ Let \(F = {\mathbb{F}}_p\) , where \(p\) is a prime number.
   divides \(x^{p^n} - x\), then \(\deg \pi(x)\) divides \(n\).
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2019-8-done}{%
 \subsection{\texorpdfstring{Spring 2019 \#8
@@ -1368,9 +1368,9 @@ Let \(\zeta = e^{2\pi i/8}\).
   \({\mathbb{Q}}\)?
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2018-3-done}{%
 \subsection{\texorpdfstring{Fall 2018 \#3
@@ -1389,9 +1389,9 @@ each of the following assertions, give a proof or a counterexample.
   If \(K/F\) and \(L/K\) are both Galois, then so is \(L/F\).
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2018-2-done}{%
 \subsection{\texorpdfstring{Spring 2018 \#2
@@ -1415,9 +1415,9 @@ Let \(f(x) = x^4 - 4x^2 + 2 \in {\mathbb{Q}}[x]\).
 
 \todo[inline]{Not the nicest proof! Would be better to replace the ad-hoc computations at the end.}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2018-3-done}{%
 \subsection{\texorpdfstring{Spring 2018 \#3
@@ -1445,9 +1445,9 @@ Let \(H_i = \operatorname{Gal}(K/E_i)\) and
   .\end{align*}
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2020-4-work}{%
 \subsection{\texorpdfstring{Spring 2020 \#4
@@ -1982,11 +1982,11 @@ Let \(p\) be a prime number and let \(F\) be a field of characteristic
 \(p\). Show that if \(a\in F\) is not a \(p\)th power in \(F\), then
 \(x^p-a \in F[x]\) is irreducible.
 
-Section omitted.
+Hint/strategy omitted.
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2020-3-work}{%
 \subsection{\texorpdfstring{Fall 2020 \#3
@@ -2047,9 +2047,9 @@ maximal if there is no \(R{\hbox{-}}\)module \(P\) with
   maximal \({\mathbb{Z}}{\hbox{-}}\)submodule of \(M\).
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2019-final-2-work}{%
 \subsubsection{\texorpdfstring{Fall 2019 Final \#2
@@ -2246,9 +2246,9 @@ Recall that the set of torsion elements in M is defined by
   \(R{\hbox{-}}\)module has non-zero torsion elements.
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{star-spring-2019-5-done}{%
 \subsubsection{\texorpdfstring{\(\star\) Spring 2019 \#5
@@ -2273,19 +2273,19 @@ maximum number of \(R{\hbox{-}}\)linearly independent elements of \(M\)
 
 Prove that \(M\) is torsion-free of rank 1 but not free.
 
-Section omitted.
+Relevant concepts omitted.
 
 :::\{.solution\} \envlist
 
-Section omitted.
+Proof omitted.
 
-Section omitted.
+Proof omitted.
 
-Section omitted.
+Proof omitted.
 
-Section omitted.
+Proof omitted.
 
-Section omitted.
+Proof omitted.
 
 \hypertarget{star-spring-2020-6-done}{%
 \subsubsection{\texorpdfstring{\(\star\) Spring 2020 \#6
@@ -2316,7 +2316,7 @@ You may assume that a finitely generated torsionfree module over a PID
 is free.
 \end{quote}
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2012-5-work}{%
 \subsubsection{\texorpdfstring{Spring 2012 \#5
@@ -2509,9 +2509,9 @@ Let \(A\) be a square matrix over the complex numbers. Suppose that
 
 Show that \(A\) is also diagonalizable over \({\mathbb{C}}\).
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{linear-algebra-misc}{%
 \section{Linear Algebra: Misc}\label{linear-algebra-misc}}
@@ -2692,7 +2692,7 @@ exists a decomposition of \(V\) as \(V = U \oplus W\) , where \(U\) and
 
 \todo[inline]{Revisit.}
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2018-5-done}{%
 \subsection{\texorpdfstring{Fall 2018 \#5
@@ -2712,11 +2712,11 @@ Let \(A\) be an \(n \times n\) matrix.
   characteristic polynomial of \(A\) equals the minimal polynomial of A.
 \end{enumerate}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Hint/strategy omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2019-8-work}{%
 \subsection{\texorpdfstring{Fall 2019 \#8
@@ -2751,9 +2751,9 @@ Define the dual of \(\Lambda\) to be
 
 \todo[inline]{Todo, missing part (c).}
 
-Section omitted.
+Solution omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2013-6-done}{%
 \subsection{\texorpdfstring{Spring 2013 \#6
@@ -2777,9 +2777,9 @@ let \(T: V\to V\) be a linear operator with characteristic polynomial
 \todo[inline]{Is there a proof without matrices? What if $V$ is infinite dimensional?}
 \todo[inline]{How to extend basis?}
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{fall-2020-8-work}{%
 \subsection{\texorpdfstring{Fall 2020 \#8
@@ -2944,11 +2944,11 @@ Hint: In both cases, all eigenvalues lie in the ground field. In each
 case find a matrix \(P\) such that \(P^{-1}AP\) is in JCF.
 \end{quote}
 
-Section omitted.
+Hint/strategy omitted.
 
-Section omitted.
+Relevant concepts omitted.
 
-Section omitted.
+Solution omitted.
 
 \hypertarget{spring-2018-4-work}{%
 \subsection{\texorpdfstring{Spring 2018 \#4
