--- a/Complex Analysis/UGA Question (with solutions)/Complex_Analysis_Solutions.tex
+++ b/Complex Analysis/UGA Question (with solutions)/Complex_Analysis_Solutions.tex
@@ -1,6 +1,6 @@
 \input{"preamble.tex"}
 
-\addbibresource{Complex\_Analysis\_Problems.bib}
+\addbibresource{Complex\_Analysis\_Solutions.bib}
 
 \let\Begin\begin
 \let\End\end
@@ -27,7 +27,7 @@
 
 \title{
 \textbf{
-    Complex Analysis Qualifying Exam Questions
+    Complex Analysis Qualifying Exam Solutions
   }
   }
 
